<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editSenderId"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:hint="@string/hint_senderId"
            android:layout_below="@+id/txtLabelGcm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:background="@drawable/border"
            android:text="@string/not_registered"
            android:id="@+id/txtRegistration"
            android:textIsSelectable="true"
            android:layout_below="@+id/editSenderId"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:layout_below="@+id/txtRegistration"
            android:layout_toLeftOf="@+id/btnTest"
            android:layout_toStartOf="@+id/btnTest"
            android:enabled="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:id="@+id/btnTest"
            android:layout_below="@+id/txtRegistration"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gcm"
            android:id="@+id/txtLabelGcm"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            style="@style/Section" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gms_notification"
            android:id="@+id/txtLabelGmsNotification"
            android:layout_below="@+id/btnRegister"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/Section"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLabelGmsNotification"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:id="@+id/btnSubscribe"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                android:id="@+id/btnPublish"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editExpiry"
            android:layout_below="@+id/linearLayout"
            android:hint="@string/hint_expiry" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editFilter"
            android:layout_below="@+id/editExpiry"
            android:hint="@string/hint_filter" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMessage"
            android:layout_below="@+id/editFilter"
            android:hint="@string/hint_message" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTag"
            android:layout_below="@+id/editMessage"
            android:hint="@string/hint_tag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt"
            android:id="@+id/txtLabelReceipt"
            android:layout_below="@+id/editTag"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            style="@style/Section"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtReceipt"
            android:background="@drawable/border"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/txtLabelReceipt"
            android:minHeight="120dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:hint="@string/nothing"
            android:textIsSelectable="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:indeterminate="true"/>
    </RelativeLayout>
</ScrollView>