<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/card_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        style="@style/CardTop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gms_settings"
                    android:id="@+id/txtLabelGmsSettings"
                    style="@style/Section"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/darkDivider" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editHost"
                    android:hint="@string/hint_host"
                    android:inputType="textUri"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPort"
                    android:layout_alignParentTop="false"
                    android:hint="@string/hint_port"
                    android:inputType="number"
                    android:layout_below="@+id/editHost" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editApiVersion"
                    android:layout_alignParentTop="false"
                    android:hint="@string/hint_apiVersion"
                    android:inputType="number"
                    android:layout_below="@+id/editPort" />
            </RelativeLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/darkDivider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/button_container_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/btnSave"
                    style="@style/FlatButton"/>
                </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        style="@style/CardBottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/content_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:id="@+id/txtLabelAbout"
                    style="@style/Section"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/darkDivider" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Label"
                    android:id="@+id/txtLabelVersion"
                    android:text="@string/version"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LabelValue"
                    android:id="@+id/txtVersion"
                    android:layout_toRightOf="@+id/txtLabelVersion"
                    android:layout_toEndOf="@+id/txtLabelVersion"
                    android:text="@string/version_name" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>